feat(#58): add personal library state
